--- a/index/index.html
+++ b/index/index.html
@@ -57,10 +57,10 @@
               </p>
               <!-- sezione icons -->
               <div class="social-icon d-flex">
-                <i class="bi bi-facebook  m-2"></i>
-                <i class="bi bi-twitter  m-2"></i>
-                <i class="bi bi-instagram  m-2"></i>
-                <i class="bi bi-whatsapp  m-2"></i>
+                <a class="social-icon-i-navbar" href="https://www.facebook.com"><i class="bi bi-facebook  m-2"></i></a>
+                <a class="social-icon-i-navbar" href="https://www.twitter.com"><i class="bi bi-twitter  m-2"></i></a>
+                <a class="social-icon-i-navbar" href="https://www.instagram.com"><i class="bi bi-instagram  m-2"></i></a>
+                <a class="social-icon-i-navbar"href="https://www.whatsapp.com"><i class="bi bi-whatsapp  m-2"></i></a>
               </div>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
@@ -68,7 +68,7 @@
               <ul class="list-unstyled">
                 <li><a href="index.html" class="text-white">Shop</a></li>
                 <li><a href="/backoffice/backoffice.html" class="text-white">Aggiungi prodotto</a></li>
-                <li><a href="/index/FAQ.html" class="text-white">FAQ</a></li>
+                <li><a href="/services/FAQ.html" class="text-white">FAQ</a></li>
               </ul>
             </div>
           </div>
@@ -97,30 +97,63 @@
 
     <main>
       <!-- MAIN CONTENT -->
-      <section class="py-5 text-center container">
-        <div class="row py-lg-5">
+      <section class="py-5 text-center">
+        <div class="container" id="container-content">
             <h1 class="fw-light text-body-secondary mb-5">ReThinK</h1>
-            <div class="container-content text-body-secondary">
-              <div class="first-content d-flex align-items-center ">
-                <div class="first-content-icon d-flex justify-content-center align-items-center ">
-                  <i class="bi bi-shield-lock"></i>
-                </div>
-                <p>Sicurezza e Garanzia al 100% </p>
-              </div>
-              <div class="second-content d-flex align-items-center">
-                <div class="second-content-icon d-flex justify-content-center align-items-center">
-                  <i class="bi bi-phone-flip"></i>
-                </div>
-                <p>Test di qualità per garantire prestazioni affidabili</p>
-              </div>
-              <div class="third-content d-flex align-items-center">
-                <div class="third-content-icon d-flex justify-content-center align-items-center ">
-                  <i class="bi bi-bookmark-check"></i>
-                </div>
-               <p>Assicurazione sui nostri prodotti</p>
-              </div>
-            </div>
         </div>
+        <div class="container">
+          <div class="row d-flex">
+            <div class="col">
+              <a
+                href="#"
+                class="list-group-item list-group-item-action d-flex gap-3 py-3"
+                aria-current="true"
+              >
+              <div class="list-group-icon-box">
+                <i class="bi bi-shield-lock"></i>
+              </div>
+                <div class="d-flex gap-2 w-100 justify-content-between">
+                  <div>
+                    <h6 class="mb-0">Sicurezza</h6>
+                    <p class="mb-0 opacity-75">Sicurezza dei dati garantita</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col">
+              <a
+                href="#"
+                class="list-group-item list-group-item-action d-flex gap-3 py-3"
+                aria-current="true"
+              >
+              <div class="list-group-icon-box">
+                <i class="bi bi-phone-flip"></i>
+              </div>
+                <div class="d-flex gap-2 w-100 justify-content-between">
+                  <div>
+                    <h6 class="mb-0">Supporto</h6>
+                    <p class="mb-0 opacity-75">Assistenza tecnica dedicata 24/7</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col">
+              <a
+                href="#"
+                class="list-group-item list-group-item-action d-flex gap-3 py-3"
+                aria-current="true"
+              >
+              <div class="list-group-icon-box">
+                <i class="bi bi-bookmark-check"></i>
+              </div>
+                <div class="d-flex gap-2 w-100 justify-content-between">
+                  <div>
+                    <h6 class="mb-0">Soddisfatto o rimborsato</h6>
+                    <p class="mb-0 opacity-75">I nostri prodotti sono TUTTI certificati</p>
+                  </div>
+                </div>
+              </a>
+            </div>
       </section>
         <div  class="container">
           <div class="row">
@@ -152,13 +185,13 @@
           Marketplace esempio per compito di fine modulo, © Epicode. Forza Napoli.
         </p>
         <p class="mb-0">
-          Non sei sicuro di acquistare un prodotto ricondizionato? Qui le domande più frequenti: <a href="/index/FAQ.html">FAQ</a>
+          Non sei sicuro di acquistare un prodotto ricondizionato? Qui le domande più frequenti: <a href="/services/FAQ.html">FAQ</a>
         </p>
         <div class="social-icon mt-5 p-3 text-center">
-          <i class="bi bi-facebook m-2"></i>
-          <i class="bi bi-twitter m-2"></i>
-          <i class="bi bi-instagram m-2"></i>
-          <i class="bi bi-whatsapp m-2"></i>
+          <a class="social-icon-i-footer" href="https://www.facebook.com"><i class="bi bi-facebook m-2"></i></a>
+          <a class="social-icon-i-footer" href="https://www.twitter.com"><i class="bi bi-twitter m-2"></i></a>
+          <a class="social-icon-i-footer" href="https://www.instagram.com"><i class="bi bi-instagram m-2"></i></a>
+          <a class="social-icon-i-footer" href="https://www.whatsapp.com"><i class="bi bi-whatsapp m-2"></i></a>
         </div>
       </div>
     </footer>
