--- a/services/FAQ.html
+++ b/services/FAQ.html
@@ -15,7 +15,7 @@
     <!-- Favicon -->
     <link rel="icon" href="/home/assets/banana-icon.svg" type="image/svg">
     <!-- Css -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/index/style.css" />
     <title>ReThink</title>
   </head>
   <body cz-shortcut-listen="true">
@@ -57,16 +57,16 @@
                 </p>
                 <!-- sezione icons -->
                 <div class="social-icon d-flex">
-                  <i class="bi bi-facebook  m-2"></i>
-                  <i class="bi bi-twitter  m-2"></i>
-                  <i class="bi bi-instagram  m-2"></i>
-                  <i class="bi bi-whatsapp  m-2"></i>
+                  <a class="social-icon-i-navbar" href="https://www.facebook.com"><i class="bi bi-facebook  m-2"></i></a>
+                  <a class="social-icon-i-navbar" href="https://www.twitter.com"><i class="bi bi-twitter  m-2"></i></a>
+                  <a class="social-icon-i-navbar" href="https://www.instagram.com"><i class="bi bi-instagram  m-2"></i></a>
+                  <a class="social-icon-i-navbar"href="https://www.whatsapp.com"><i class="bi bi-whatsapp  m-2"></i></a>
                 </div>
               </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4>Menu</h4>
               <ul class="list-unstyled">
-                <li><a href="index.html" class="text-white">Shop</a></li>
+                <li><a href="/index/index.html" class="text-white">Shop</a></li>
                 <li><a href="/backoffice/backoffice.html" class="text-white">Aggiungi prodotto</a></li>
               </ul>
             </div>
@@ -152,10 +152,14 @@
           </p>
           <p class="mb-0">
             Non sei sicuro di acquistare un prodotto ricondizionato? Allora compratene uno nuovo.</a>
-            <a href="/docs/5.3/getting-started/introduction/"
-              
-            >
+            <a href="/docs/5.3/getting-started/introduction/">
           </p>
+          <div class="social-icon mt-5 p-3 text-center">
+            <a class="social-icon-i-footer" href="https://www.facebook.com"><i class="bi bi-facebook m-2"></i></a>
+            <a class="social-icon-i-footer" href="https://www.twitter.com"><i class="bi bi-twitter m-2"></i></a>
+            <a class="social-icon-i-footer" href="https://www.instagram.com"><i class="bi bi-instagram m-2"></i></a>
+            <a class="social-icon-i-footer" href="https://www.whatsapp.com"><i class="bi bi-whatsapp m-2"></i></a>
+          </div>
         </div>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
